# docs/swagger.json
@@ -230,7 +230,7 @@
                         "required": true
                     },
                     {
-                        "description": "Data Format to add education",
+                        "description": "Data Format to add project",
                         "name": "Data",
                         "in": "body",
                         "required": true,
@@ -269,6 +269,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.ResponseOKGetAllCountries"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseWithNoBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/allProjectCategory": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Project"
+                ],
+                "summary": "Get All Project Category List",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token Header",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseOKProjectCategory"
                         }
                     },
                     "500": {
@@ -998,7 +1032,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseOKSearchProject"
+                            "$ref": "#/definitions/models.SearchProjectResponse"
                         }
                     },
                     "400": {
@@ -1204,7 +1238,7 @@
                 }
             }
         },
-        "/uploadAttachment/{id}": {
+        "/uploadAttachment": {
             "post": {
                 "consumes": [
                     "multipart/form-data"
@@ -1219,13 +1253,6 @@
                         "description": "Token Header",
                         "name": "token",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Project ID",
-                        "name": "id",
-                        "in": "path",
                         "required": true
                     },
                     {
@@ -1565,6 +1592,9 @@
                         "type": "string"
                     }
                 },
+                "category": {
+                    "type": "integer"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -1707,6 +1737,32 @@
                 }
             }
         },
+        "models.PageInfoSchema": {
+            "type": "object",
+            "properties": {
+                "filter": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "keyword": {
+                    "type": "string"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "sort": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.PortfolioRequestParameter": {
             "type": "object",
             "properties": {
@@ -1757,6 +1813,17 @@
                     "type": "integer"
                 },
                 "trelloKey": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ProjectCategoryData": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -1937,6 +2004,23 @@
                 }
             }
         },
+        "models.ResponseOKProjectCategory": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ProjectCategoryData"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ResponseOKProjectDetail": {
             "type": "object",
             "properties": {
@@ -1947,23 +2031,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.ProjectDetailResponse"
-                    }
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ResponseOKSearchProject": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.SearchProjectQuery"
                     }
                 },
                 "message": {
@@ -2041,6 +2108,12 @@
         "models.SearchProjectQuery": {
             "type": "object",
             "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -2050,8 +2123,29 @@
                 "price": {
                     "type": "number"
                 },
+                "skill": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "models.SearchProjectResponse": {
+            "type": "object",
+            "properties": {
+                "PageMeta": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.PageInfoSchema"
+                },
+                "project": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.SearchProjectQuery"
+                    }
                 }
             }
         },
