# main.go
@@ -81,6 +81,7 @@ func main() {
 		v1.POST("/submitProjectForReview/:id", controller.AuthenticationToken, controller.ReviewProject)
 		v1.POST("/rejectReviewProject/:id", controller.AuthenticationToken, controller.RejectReviewProject)
 		v1.POST("/completeProject/:id", controller.AuthenticationToken, controller.CompleteProject)
+		v1.GET("/allProjectCategory", controller.AuthenticationToken, controller.GetAllProjectCategory)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
